# test-readthedocs

./: .readthedocs.yaml  README.rst  pyproject.toml
app/: api.py  main.py
app/ccc/: foo.py
docs/: conf.py
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: api.rst  classes.rst  google.rst  yandex.rst
docs/source/usage/: example.rst  installation.rst
