[tool.poetry]
name = "sb-documentation-example"
version = "0.1.0"
description = ""
authors = ["Ivan Zhirov <zhirovivan@gmail.com>"]
readme = "README.md"
packages = [{include = "sb_documentation_example"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.docs.dependencies]
myst-parser = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool]
